fix(接口测试): 修复集合报告停止问题
【【接口测试】github#34563， 批量执行自动化场景无法完全停止】
https://www.tapd.cn/55049933/bugtrace/bugs/view/1155049933001050141